--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
+  "name": "ts-actionpack",
+  "version": "0.0.3",
+  "description": "Tiny library for \"one controller instance per request\" backend in typescript",
+  "homepage": "https://github.com/hi-ogawa/ts-actionpack",
   "scripts": {
     "build": "tsc",
     "build:clean": "rm -rf build",
+    "build:refresh": "npm run build:clean && npm run build",
     "test": "NODE_ENV=test mocha",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "example": "nodemon build/tests/examples/runner",
-    "package": "echo TODO"
+    "package": "rm -rf build/package && mkdir -p build/package && cp build/src/* package.json README.md build/package",
+    "deploy": "npm run build:refresh && npm run package && npm publish ./build/package"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
