--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           node-version: "16"
       - run: npm install
-      - run: npm run format:check
+      - run: npm run lint:check
   test:
     runs-on: ubuntu-20.04
     steps:
