--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build:clean": "rm -rf build",
     "build:refresh": "npm run build:clean && npm run build",
     "test": "NODE_ENV=test mocha",
+    "lint": "npm run prettier && npm run eslint",
+    "lint:check": "npm run prettier:check && npm run eslint:check",
+    "eslint": "eslint . --fix",
+    "eslint:check": "eslint .",
     "prettier": "prettier --write .",
+    "prettier:diff": "prettier --write $(git diff HEAD --name-only)",
     "prettier:check": "prettier --check .",
     "example": "nodemon build/tests/examples/runner",
     "package": "rm -rf build/package && mkdir -p build/package && cp build/src/* package.json README.md build/package",
@@ -21,7 +26,12 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "ajv": "^8.6.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "mocha": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
